Fix for filter open/collapse

--- a/_includes/wai-evaluation-tools-list/css/styles.css
+++ b/_includes/wai-evaluation-tools-list/css/styles.css
@@ -2,6 +2,16 @@
 --pseudo-backgroundcolor: lightgray;
 }
 
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(1.4); /* IE */
+  -moz-transform: scale(1.4); /* FF */
+  -webkit-transform: scale(1.4); /* Safari and Chrome */
+  -o-transform: scale(1.4); /* Opera */
+  transform: scale(1.4);
+}
+
 .minimal-header-container{
   display: grid !important;
   grid-column-gap: 32px;
@@ -98,6 +108,9 @@ main>header {
 
 #left-col legend {
     font-size: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .filterLegend {
